[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["evgeny <kingfoot1351994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
sqlparse = "0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
